# hylasound

./: .gitignore  CMakeLists.txt  README.md  hylasound_fr.ts
include/: aboutdialog.hpp  addbuttondialog.hpp  buttongrid.hpp  filenotfounddialog.hpp  globalstyle.hpp  gridtabs.hpp  mainwindow.hpp  soundbutton.hpp  tabnamedialog.hpp
resources/: icon.rc  soundboard.qrc
resources/styles/: awesome.qss  test.qss
src/: aboutdialog.cpp  addbuttondialog.cpp  buttongrid.cpp  filenotfounddialog.cpp  gridtabs.cpp  main.cpp  mainwindow.cpp  soundbutton.cpp  tabnamedialog.cpp
translations/: hylasound_fr.ts
